--- a/_toc.yml
+++ b/_toc.yml
@@ -7,3 +7,4 @@ chapters:
 - file: 00.intro
 - file: 01.intro_to_economics
 - file: 02.sets_numbers_coordinates_distances
+- file: 03.mappings_functions_correspondences
