--- a/_toc.yml
+++ b/_toc.yml
@@ -15,3 +15,4 @@ chapters:
 - file: 08.multivariate_differential_calculus
 - file: 09.intro_to_optimisation
 - file: 10.univariate_integration
+- file: bibliography
