--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,4 @@ matplotlib
 numpy
 # layout is brocken on the bibliography page, work-around
 # https://github.com/executablebooks/jupyter-book/issues/1997
-docutils-0.17.1
+# docutils-0.17
