Update main to the latest changes in publish branch

--- a/_toc.yml
+++ b/_toc.yml
@@ -3,8 +3,8 @@
 
 format: jb-book
 root: index
+title: EMET7001
 chapters:
-- file: 00.intro
 - file: 01.intro_to_economics
 - file: 02.sets_numbers_coordinates_distances
 - file: 03.mappings_functions_correspondences
