--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
 jupyter-book
 matplotlib
 numpy
+# layout is brocken on the bibliography page, work-around
+# https://github.com/executablebooks/jupyter-book/issues/1997
+# docutils-0.17
