--- a/_toc.yml
+++ b/_toc.yml
@@ -6,6 +6,7 @@ root: index
 title: EMET7001
 chapters:
 - file: 01.intro_to_economics
+- file: 01.intro_wason
 - file: 02.sets_numbers_coordinates_distances
 # - file: 03.mappings_functions_correspondences
 # - file: 04.equations_inequalities_binary_relations
