Remove the header message

--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ html:
     utterances              : false
 #######################################################################################
 # A banner announcement at the top of the site.
-  announcement: "Welcome to EMET7001 in semester 1, 2024" 
+  announcement: "" 
 
 #######################################################################################
 # LaTeX-specific settings
