Exclude README.md from JB

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ author                      : Fedor Iskhakov, based on notes by D.S. Eldridge # 
 copyright                   : "2024"  # Copyright year to be placed in the footer
 logo                        : "_static/img/math_logo.png"  # A path to the book logo
 # Patterns to skip when building the book. Can be glob-style (e.g. "*skip.ipynb")
-exclude_patterns            : [_build, latex_slides, Thumbs.db, .DS_Store, "**.ipynb_checkpoints", tutorial_problems]
+exclude_patterns            : [_build, latex_slides, Thumbs.db, .DS_Store, "**.ipynb_checkpoints", tutorial_problems, README.md]
 # Auto-exclude files not in the toc
 only_build_toc_files        : false
 
