--- a/_toc.yml
+++ b/_toc.yml
@@ -9,7 +9,7 @@ chapters:
 - file: 01.intro_wason
 - file: 02.sets_numbers_coordinates_distances
 - file: ps01.alpha
-# - file: 03.mappings_functions_correspondences
+- file: 03.mappings_functions_correspondences
 # - file: 04.equations_inequalities_binary_relations
 # - file: 05.sequences_series_limits
 # - file: 06.univariate_differentiation
