--- a/_toc.yml
+++ b/_toc.yml
@@ -10,6 +10,8 @@ chapters:
 - file: 02.sets_numbers_coordinates_distances
 - file: ps01.alpha
 - file: 03.mappings_functions_correspondences
+- file: 03.desmos
+- file: ps02.beta
 - file: 04.equations_inequalities_binary_relations
 - file: 05.sequences_series_limits
 - file: 06.univariate_differentiation
