--- a/_toc.yml
+++ b/_toc.yml
@@ -14,6 +14,7 @@ chapters:
 - file: ps02.beta
 - file: 04.equations_inequalities
 - file: 13_bisections_newton.ipynb
+- file: ps03.gamma
 # - file: 05.sequences_series_limits
 # - file: 06.univariate_differentiation
 # - file: 07.linear_algebra
