Problem set epsilon, update to index and toc

--- a/_toc.yml
+++ b/_toc.yml
@@ -17,7 +17,8 @@ chapters:
 - file: ps03.gamma
 - file: 05.sequences_series
 - file: ps04.delta
-# - file: 06.univariate_differentiation
+- file: 06.univariate_differentiation
+- file: ps05.epsilon
 # - file: 07.linear_algebra
 # - file: 07.linear_systems
 # - file: 08.multivariate_differential_calculus
