--- a/_toc.yml
+++ b/_toc.yml
@@ -26,6 +26,7 @@ chapters:
 
 
 - file: 09.intro_to_optimisation
+- file: 99.function_shape_deriv
 - file: 99.quadratic_forms
 - file: 99.vector_inequalities
 - file: 99.taylor_series
