--- a/_toc.yml
+++ b/_toc.yml
@@ -18,6 +18,7 @@ chapters:
 - file: 05.sequences_series
 - file: ps04.delta
 - file: 06.univariate_differentiation
+- file: ps05.epsilon
 - file: 07.linear_algebra
 - file: 07.linear_systems
 - file: 08.multivariate_differential_calculus
