Draft of lectures 8 and 9

--- a/_toc.yml
+++ b/_toc.yml
@@ -21,6 +21,6 @@ chapters:
 - file: ps05.epsilon
 - file: 07.linear_algebra
 - file: 07.linear_systems
-# - file: 08.multivariate_differential_calculus
+- file: 08.multivariate_differential_calculus
 # - file: 10.univariate_integration
 - file: bibliography
