--- a/_toc.yml
+++ b/_toc.yml
@@ -20,6 +20,7 @@ chapters:
 - file: 06.univariate_differentiation
 - file: ps05.epsilon
 - file: 07.linear_algebra
+- file: ps06.zeta
 - file: 07.linear_systems
 - file: 08.multivariate_differential_calculus
 # - file: 10.univariate_integration
