Tutorial problems eta

--- a/_toc.yml
+++ b/_toc.yml
@@ -22,6 +22,7 @@ chapters:
 - file: 07.linear_algebra
 - file: ps06.zeta
 - file: 07.linear_systems
+- file: ps07.eta
 - file: 08.multivariate_differential_calculus
 # - file: 10.univariate_integration
 - file: bibliography
