differential calculus part two

--- a/_toc.yml
+++ b/_toc.yml
@@ -25,5 +25,6 @@ chapters:
 - file: ps07.eta
 - file: 08.multivariate_differential_calculus
 - file: ps08.theta
+- file: 09.multivariate_differential_calculus
 # - file: 10.univariate_integration
 - file: bibliography
