--- a/_toc.yml
+++ b/_toc.yml
@@ -26,5 +26,6 @@ chapters:
 - file: 08.multivariate_differential_calculus
 - file: ps08.theta
 - file: 09.multivariate_differential_calculus
+- file: ps09.iota
 # - file: 10.univariate_integration
 - file: bibliography
