--- a/_toc.yml
+++ b/_toc.yml
@@ -28,4 +28,13 @@ chapters:
 - file: 09.multivariate_differential_calculus
 - file: ps09.iota
 # - file: 10.univariate_integration
+
+- file: 10.univariate_integration
 - file: bibliography
+
+
+- file: 09.intro_to_optimisation
+- file: 99.function_shape_deriv
+- file: 99.quadratic_forms
+- file: 99.vector_inequalities
+- file: 99.taylor_series
