--- a/_toc.yml
+++ b/_toc.yml
@@ -27,5 +27,7 @@ chapters:
 - file: ps08.theta
 - file: 09.multivariate_differential_calculus
 - file: ps09.iota
-# - file: 10.univariate_integration
+- file: 10.univariate_integration
+- file: ps10.kappa
+
 - file: bibliography
