Practice materials for the exam

--- a/_toc.yml
+++ b/_toc.yml
@@ -29,5 +29,6 @@ chapters:
 - file: ps09.iota
 - file: 10.univariate_integration
 - file: ps10.kappa
+- file: 12.practice_for_exam
 
 - file: bibliography
